--- a/index.html
+++ b/index.html
@@ -1,12 +1,60 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@400;700;900&display=swap" rel="stylesheet">
     <title>Document</title>
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css"> -->
+
+    <link rel="stylesheet" href="sass/custom.css">
+    <style>
+       
+        
+    </style>
 </head>
+
 <body>
-    <h1>Ricardo</h1>
+    <div class="container alto100 d-flex align-items-center ">
+        <div class="row d-flex justify-content-center">
+            <!--Sedan-->
+            <div class="col-12 col-md-3 bg-primary fondo">
+                <img src="img/icon-sedans.svg" alt="">
+                <h1>SEDANS</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam, nihil ea accusamus facere quasi
+                    obcaecati, molestias eligendi sed, illum porro asperiores quaerat harum doloremque soluta assumenda
+                    eaque! Nostrum, sequi veniam?</p>
+                <p class="btn btn-info">Leer más</p>
+            </div>
+            <!--Sedan-->
+            <div class="col-12 col-md-3 bg-secondary">
+                <img src="img/icon-sedans.svg" alt="">
+                <h1>SEDANS</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam, nihil ea accusamus facere quasi
+                    obcaecati, molestias eligendi sed, illum porro asperiores quaerat harum doloremque soluta assumenda
+                    eaque! Nostrum, sequi veniam?</p>
+                <p class="btn btn-info">Leer más</p>
+            </div>
+            <!--Sedan-->
+            <div class="col-12 col-md-3 bg-warning">
+                <img src="img/icon-sedans.svg" alt="">
+                <h1>SEDANS</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam, nihil ea accusamus facere quasi
+                    obcaecati, molestias eligendi sed, illum porro asperiores quaerat harum doloremque soluta assumenda
+                    eaque! Nostrum, sequi veniam?</p>
+                <p class="btn btn-info">Leer más</p>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
