--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <img src="img/icon-sedans.svg" alt="">
                 <h1>SEDANS</h1>
                 <p>Lorem ipsum dolor sit, amet consggectetur adipisicing elit. Aliquam, nihil ea accusamus facere quasi
-                    obcaecati, molestias eligendi sed, illum porro asperiores quaerat harum doloremque soluta assumenda
+                    obcaecatigg, molestias eligendi sed, illum porro asperiores quaerat harum doloremque soluta assumenda
                     eaque! Nostrum, sequi veniam?</p>
                 <p class="btn btn-info">Leer más</p>
             </div>
