--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             <div class="col-12 col-md-3 bg-primary fondo">
                 <img src="img/icon-sedans.svg" alt="">
                 <h1>SEDANS</h1>
-                <p>Lorem ipsum dolor sit, amet consggectetur adipisicing elit. Aliquam, nihil ea accusamus facere quasi
+                <p>Lorem ipsum dolor sit, amet fsdfdsfconsggectetur adipisicing elit. Aliquam, nihil ea accusamus facere quasi
                     obcaecatigg, molestias eligendi sed, illum porro asperiores quaerat harum doloremque soluta assumenda
-                    eaque! Nostrum, sequi veniam?</p>
+                    eaque! Nostrum, sequi yyyveniam?</p>
                 <p class="btn btn-info">Leer más</p>
             </div>
             <!--Sedan-->
