--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <!--Sedan-->
             <div class="col-12 col-md-3 bg-primary fondo">
                 <img src="img/icon-sedans.svg" alt="">
-                <h1>SEDANS</h1>
+                <h1>SEEEEDANS</h1>
                 <p>Lorem ipsum dolor sit, amet fsdfdsfconsggectetur adipisicing elit. Aliquam, nihil ea accusamus facere quasi
                     obcaecatigg, molestias eligendi sed, illum porro asperiores quaerat harum doloremque soluta assumenda
                     eaque! Nostrum, sequi yyyveniam?</p>
